--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </div>
     <!-- Include Axios library from a CDN -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
